@@ -88,6 +88,7 @@ Version 1.1.1 March 14, 2010
 - Enh #971: Added CDbCriteria::addNotInCondition() (Sam Dark)
 - Enh #992: Added 'data' option to CTabView.tabs property (Qiang)
 - Enh #1001: Added CActiveRecord::resetScope() that resets all scopes and criterias applied including default scope (Sam Dark)
+- Enh #1062: Added CDbCriteria::addBetweenCondition() (Sam Dark)
 - Enh #1093: CJSON now tries to use native PHP functions prior to use Yii implementation (Sam Dark)
 - Enh: Refactored the blog demo to make use of the new CActiveForm and the filtering feature of CGridView (Qiang)
 - Enh: Improved the code generated by yiic, including menu refactoring, filtering/search support, and using active form (Qiang)
